--- a/templates/assets/static/base.html
+++ b/templates/assets/static/base.html
@@ -19,6 +19,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
 	<script src="{% static 'js/carrinho.js' %}"></script>
+	<!-- Adicione a biblioteca datetimepicker -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/datetimepicker@2.4.1/build/jquery.datetimepicker.min.css">
+	<script src="https://cdn.jsdelivr.net/npm/datetimepicker@2.4.1/build/jquery.datetimepicker.full.min.js"></script>
 
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
 </head>
