--- a/templates/assets/static/locacao/crud/locar_carros.html
+++ b/templates/assets/static/locacao/crud/locar_carros.html
@@ -24,7 +24,7 @@
 </div>
 	<style>
 	.list-group-item{
-		background: #007bff;
+		background: #32373b;
 	}
 		#edit{
 			color: white;
@@ -33,7 +33,7 @@
 		}
 		#edit:hover{
 			transition: 0.2s;
-			color: black;
+			color: #e8dede;
 		}
 
 		#intro {
