--- a/templates/assets/static/locacao/locacao.html
+++ b/templates/assets/static/locacao/locacao.html
@@ -2,16 +2,39 @@
 
 {% block content %}
 <div class="container py-5">
-  <div class="card p-5">
-    <h2 class="mb-4">Realizar Reserva do Carro</h2>
+  <div id="intro" class="card p-5">
+    <h2 class="mb-4 text-center">Realizar Reserva do Carro</h2>
 
-	<form method="post" class="mx-auto">
-	  {% csrf_token %}
+    <form method="post" class="mx-auto">
+      {% csrf_token %}
 
-		{{ form.as_p }}
+      <div class="form-group">
+        <label for="{{ form.data_locacao.id_for_label }}">Data de Locação:</label>
+        <input type="date" name="{{ form.data_locacao.name }}" id="{{ form.data_locacao.id_for_label }}" class="form-control">
+        <input type="time" name="{{ form.hora_locacao.name }}" id="{{ form.hora_locacao.id_for_label }}" class="form-control mt-2">
+      </div>
+
+      <div class="form-group">
+        <label for="{{ form.data_devolucao.id_for_label }}">Data de Devolução:</label>
+        <input type="date" name="{{ form.data_devolucao.name }}" id="{{ form.data_devolucao.id_for_label }}" class="form-control">
+        <input type="time" name="{{ form.hora_devolucao.name }}" id="{{ form.hora_devolucao.id_for_label }}" class="form-control mt-2">
+      </div>
+
       <button type="submit" class="btn btn-primary">Realizar Reserva</button>
       <a href="{% url 'home' %}" class="btn btn-secondary">Cancelar</a>
-	</form>
+    </form>
+  </div>
 </div>
+	<style>
+		#intro {
+			height: 100vh;
+		}
 
+		      /* Height for devices larger than 576px */
+		@media (min-width: 992px) {
+			#intro {
+				margin-top: 20px;
+			}
+		}
+	</style>
 {% endblock %}
