ajutando telas de formularios

--- a/templates/assets/static/carro/add_carro.html
+++ b/templates/assets/static/carro/add_carro.html
@@ -1,10 +1,11 @@
 {% extends 'assets/static/base.html' %}
 {% block content %}
+{% load bootstrap5 %}
 <div class="container py-5 mt-5">
   <h2>Adicionar Novo Automóvel</h2>
 	<form method="post" enctype="multipart/form-data">
 		{% csrf_token %}
-		{{ form.as_p }}
+		{% bootstrap_form form %}
 
 		<button type="submit" class="btn btn-primary">Salvar</button>
         <a href="{% url 'home' %}" class="btn btn-secondary">Cancelar</a>
