--- a/templates/assets/static/locacao/carros_locados.html
+++ b/templates/assets/static/locacao/carros_locados.html
@@ -1,52 +1,82 @@
 {% extends 'assets/static/base.html' %}
-{% load static %}
 {% block content %}
-<div class="container py-5 mt-4">
-  <div class="row justify-content-center">
-    <div class="col-md-8">
-      <h2 class="text-center">Minhas Reservas</h2>
+{% load static %}
+<div class="container py-5">
+  <h2 class="text-center">Minhas Reservas</h2>
 
     {% if messages %}
 	    <ul class="messages">
 	        {% for message in messages %}
 	            {% if message.tags %}
-		            <li class="message">{{ message }}</li>
+		            <p class="message">{{ message }}</p>
 	            {% endif %}
 	        {% endfor %}
 	    </ul>
 	{% endif %}
 
-
-      {% if reservas %}
-        <ul class="list-group mt-5">
+  {% if reservas %}
+    <div class="table-responsive">
+      <table class="table table-bordered mt-5">
+        <thead>
+          <tr>
+            <th>Marca e Modelo</th>
+            <th>Imagem do Carro</th>
+            <th>Data de Locação</th>
+            <th>Hora de Locação</th>
+            <th>Data de Devolução</th>
+            <th>Hora de Devolução</th>
+            <th>KM Atual do Veículo</th>
+            <th>Limite de KM/dia</th>
+            <th>Valor de Locação (R$)</th>
+            <th>Status de Locação</th>
+            <th>Cancelar Reserva</th>
+          </tr>
+        </thead>
+        <tbody>
           {% for reserva in reservas %}
-            <li class="list-group-item">
-              <h4 class="font-weight-bold">{{ reserva.automovel.modelo.marca.descricao }} - {{ reserva.automovel.modelo.descricao }}</h4>
-            {% if reserva.automovel.imagem == "" or reserva.automovel.imagem == null %}
-				<img class="card-img-top" src="{% static 'imagens/error.png' %}" alt="Carro 1">
-	        {% else %}
-                <img class="card-img-top" src="{{ reserva.automovel.imagem.url }}" alt="imagem do automovel reservado">
-	        {% endif %}
-              <p class="mt-4"><strong>Data de Locação:</strong> {{ reserva.data_locacao }}</p>
-              <p><strong>Hora de Locação:</strong> {{ reserva.hora_locacao }}</p>
-              <p><strong>Data de Devolução:</strong> {{ reserva.data_devolucao }}</p>
-              <p><strong>Hora de Devolução:</strong> {{ reserva.hora_devolucao}}</p>
-              <p><strong>Quilometragem:</strong> {{ reserva.quilometragem }}</p>
-              <p><strong>Valor de Locação:</strong> R$ {{ reserva.valor_locacao }}</p>
-              <p><strong>Status de Locação:</strong> {{ reserva.status}}</p>
-	          <a class="btn btn-primary" href="{% url 'cancelar_reserva' reserva.automovel.id %}">Cancelar reserva</a>
-            </li>
+          <tr>
+            <td><strong>{{ reserva.automovel.modelo.marca.descricao }} - {{ reserva.automovel.modelo.descricao }}</strong></td>
+            <td>
+              {% if reserva.automovel.imagem %}
+                <img class="car-img" src="{{ reserva.automovel.imagem.url }}" alt="Imagem do automóvel">
+              {% else %}
+                <img class="car-img" src="{% static 'imagens/error.png' %}" alt="Imagem indisponível">
+              {% endif %}
+            </td>
+            <td>{{ reserva.data_locacao }}</td>
+            <td>{{ reserva.hora_locacao }}</td>
+            <td>{{ reserva.data_devolucao }}</td>
+            <td>{{ reserva.hora_devolucao }}</td>
+            <td>{{ reserva.automovel.quilometragem }}</td>
+            <td>{{ reserva.limite_km_dia }}</td>
+            <td>R$ {{ reserva.valor_locacao }}</td>
+            <td>{{ reserva.status }}</td>
+            <td><a class="btn btn-outline-danger" href="{% url 'cancelar_reserva' reserva.automovel.id %}">Cancelar</a></td>
+          </tr>
           {% endfor %}
-        </ul>
-      {% else %}
-        <h5 id="intro" class="mt-4 text-center"> Você ainda não fez nenhuma reserva.</h5>
-      {% endif %}
+        </tbody>
+      </table>
     </div>
-  </div>
-<a class="btn btn-secondary" href="{% url 'home' %}">Voltar</a>
+  {% else %}
+    <h5 id="intro" class="mt-4 text-center">Você ainda não fez nenhuma reserva.</h5>
+  {% endif %}
+  <a class="btn btn-secondary" href="{% url 'home' %}">Voltar</a>
 </div>
-	<style>
 
+	<style>
+	th{
+		max-width: 110px;
+		max-height: 30px;
+	}
+	td{
+		max-width: 100px;
+		max-height: 10px;
+	}
+
+	.car-img {
+	  max-width: 80px; /* Defina o tamanho desejado para a imagem */
+	  max-height: 60px;
+	}
 	.message {
 	    background-color: #007bff;
 		padding: 10px;
