--- a/templates/assets/static/locacao/carros_locados.html
+++ b/templates/assets/static/locacao/carros_locados.html
@@ -25,9 +25,9 @@
             <th>Hora de Locação</th>
             <th>Data de Devolução</th>
             <th>Hora de Devolução</th>
-            <th>KM Atual do Veículo</th>
-            <th>Limite de KM/dia</th>
-            <th>Valor de Locação (R$)</th>
+            <th>KM tual do Veículo</th>
+            <th>Limite de KM</th>
+            <th>Valor de Locação</th>
             <th>Status de Locação</th>
             <th>Cancelar Reserva</th>
           </tr>
