--- a/templates/assets/static/locacao/crud/locar_carros.html
+++ b/templates/assets/static/locacao/crud/locar_carros.html
@@ -12,8 +12,8 @@
 
   <!-- Formulário de busca -->
   <form method="get" class="form-inline justify-content-center mt-4">
-    <div class="form-group">
-      <input type="text" name="search" class="form-control" placeholder="Cliente ou Chassi">
+    <div class="form-group col-md-8 offset-md-2">
+      <input type="text" name="search" class="form-control form-control-lg mr-sm-2 flex-grow-1" placeholder="Cliente ou Chassi">
     </div>
     <button type="submit" class="btn btn-primary ml-2">Buscar</button>
   </form>
